--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/HYDRA_RPS.jpg" alt="">
+                    <img src="HYDRA_RPS.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Rudransh and I'm a <span class="typing-2"></span></div>
@@ -153,77 +153,77 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner1.jpg" alt="">
+                        <img src="banner1.jpg" alt="">
                         <div class="text">Jarvis Ai Voice Assistant</div>
                         <p>This is a AI Voice Assistant. Its fully written in Python. It can Open apps. Read News using News API, Search Google & Wikipedia, </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner2.png" alt="">
+                        <img src="banner2.png" alt="">
                         <div class="text">Student Management System</div>
                         <p>It's a Fully Functional realtime PHP based Student Management System in HTML, CSS, Js, PHP, MySQL.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner3.jpg" alt="">
+                        <img src="banner3.jpg" alt="">
                         <div class="text">Online MultiPlayer Game </div>
                         <p>It's An Online Multiplayer Game made using Python in PyGame & Using WebSockets. It can Handle Multiple clients at a single Time. </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner5.jpg" alt="">
+                        <img src="banner5.jpg" alt="">
                         <div class="text">Working Car Racing Game</div>
                         <p>It's A very Awesome Car Racing Game Made using Python & Pygame</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner4.jpg" alt="">
+                        <img src="banner4.jpg" alt="">
                         <div class="text">HangMan Game</div>
                         <p>Its a Working HangMan Game Made using Python.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner6.jpg" alt="">
+                        <img src="banner6.jpg" alt="">
                         <div class="text">Tetris Game</div>
                         <p>It's A working Tetris game in python using Pygame.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner8.png" alt="">
+                        <img src="banner8.png" alt="">
                         <div class="text">AI Sudoku Solver</div>
                         <p>I have made a software That Can Solve Any Sudoku.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner7.jpg" alt="">
+                        <img src="banner7.jpg" alt="">
                         <div class="text">News Reader App</div>
                         <p>Its A App That Reads News For us. It can give news on any Topic.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner9.png" alt="">
+                        <img src="banner9.png" alt="">
                         <div class="text">AI ChatBot Using Machine Learning</div>
                         <p>Its a AI ChatBot That Talks to us And It also learns Various Things By Talking with us.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner10.jpg" alt="">
+                        <img src="banner10.jpg" alt="">
                         <div class="text">RealTime Weather Prediction App</div>
                         <p>It can Give Weather details of any place on Earth.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/banner11.jpg" alt="">
+                        <img src="banner11.jpg" alt="">
                         <div class="text">Smart Security CCTV Camera</div>
                         <p>It's a smart CCTV Camera Software That Can sense Motion and also Identifies the Source of Motion</p>
                     </div>
