--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com"></a>Rudransh</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created By <a href="https://github.com/RudranshPratapSingh/Portofolio/edit/main/index.html"></a>Rudransh</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
